update UI, api and uninstall library

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://unpkg.com/@tanstack/react-query@4/build/umd/index.production.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.4/lottie.min.js"></script>
+
   </body>
 </html>
